--- a/src/app/components/body/body.component.html
+++ b/src/app/components/body/body.component.html
@@ -1,2 +1,17 @@
-<router-outlet></router-outlet>
-
+<div class="container">
+    <div class="banner">
+        <div class="logo">
+            <img src="/images/My_Pet_Care noBG.png" alt="">
+        </div>
+        <div class="user">
+            <label for="">João Victor </label>
+            <div class="img"></div>
+        </div>
+    </div>
+    <div class="main">
+        <app-header></app-header>
+        <div class="content">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
