--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,8 +1,8 @@
 .container{
   width: 100%;
   min-height: 10%;
-  background-color: #0075eb;
-  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.11);
 }
 
 
@@ -42,7 +42,7 @@
     width: 90%;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.31);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.226);
   }
 
   .p-menuitem-text {
@@ -73,7 +73,6 @@
     padding: 0 0;
     background: #0075eb;
     border: 1px solid #ffffff;
-    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     width: 100%;
     border-radius: 6px;
     
@@ -99,7 +98,7 @@
   //Hover sobre a opcao que tem dropdown
   .p-menubar .p-menuitem.p-highlight > .p-menuitem-content {
     transition: 1s;
-    background: #ffae34;
+    background: #0075eb;
     border-radius: 10px;
   }
   .p-menuitem-active .p-menuitem-text,.p-menuitem-active .p-menuitem-icon  {
@@ -115,7 +114,7 @@
     > .p-menuitem:not(.p-highlight):not(.p-disabled)
     > .p-menuitem-content:hover {
     color: #ffffff;
-    background: #ffae34;
+    background: #0075eb;
     border-radius: 10px;
   }
 
@@ -144,12 +143,12 @@
     .p-menuitem-link
     .p-submenu-icon {
     color: #ffffff;
-    background: #ffae34;
+    background: #0075eb;
   }
 
   //item selecionado no focus
   .p-menubar .p-menuitem.p-highlight.p-focus > .p-menuitem-content {
-    background: #ffae34;
+    background: #0075eb;
   }
 
   //toda area selecionado, "onFocus"
@@ -187,7 +186,7 @@
   .p-menubar
     .p-menuitem:not(.p-highlight):not(.p-disabled)
     > .p-menuitem-content:hover {
-    color: #ffae34;
+    color: #0075eb;
     background: #f3f4f6;
   }
 
@@ -197,7 +196,7 @@
     > .p-menuitem-content:hover
     .p-menuitem-link
     .p-menuitem-text {
-    color: #ffae34;
+    color: #0075eb;
   }
 
   //cor do icone do menu do dropdown
@@ -211,7 +210,7 @@
     > .p-menuitem-content:hover
     .p-menuitem-link
     .p-submenu-icon {
-    color: #ffae34;
+    color: #0075eb;
   }
 }
 
